--- CHANGELOG ---

--- Assimulo-FUTURE---

--- Assimulo-3.7.0---
    * New CVode option: `maxstepshnil` (default = 10). Enforces a minimal stepsize 
    after `maxstepshnil` consecutive successful integration steps without time advancement.
    See docstring for details. This prevents the time-integration loop from getting
    stuck for evaluation failures after a fixed time-point.
    * CVode and IDA will now correctly abort simulation for BaseExceptions raised 
    from any problem callbacks.

--- Assimulo-3.6.0---
    * Added get_sundials_version function (import from assimulo.solvers.sundials).
    * Fixed bug that Radau5ODE would not count state events in statistics.
    * Removed tests from the Assimulo installation.
    * Changed testing framework from `nose` to `pytest`.

--- Assimulo-3.5.2 ---
    * Allow to build without distutils for Python>=3.12 support

--- Assimulo-3.5.1 ---
    * Fixed build with sundials 7.x
    * Added "std=legacy" as default fortran compile flag. 
      This addresses compilation issues commonly experienced with more modern Fortran standards.

--- Assimulo-3.5.0 ---
    * Changed "numpy.float" to equivalent "numpy.float64" due to DeprecationWarnings in numpy >= 1.20.
    * Improved examples with sparse jacobians by omitting the zeros in the jacobians.
    * Upgraded to Cython >= 3.
    * Removed deprecated build option "sundials_with_superlu", which is checked automatically.
    * Added support for Sundials 7.x

--- Assimulo-3.4.3 ---
    * Improved compliance with newer scipy version by instead using corresponding numpy calls when more suitable.

--- Assimulo-3.4.2 ---
    * Updated an import statement in one of the examples to resolve compliance issues with scipy 1.10.1.

--- Assimulo-3.4.1 ---
    * Restored functionality of CVode with 'external_event_detection' = True, which broke with 3.4.0.
    * CVode now allows rtol = 0.
    * Added support for CVode (without sensitivities) with non-negative relative tolerance vector.